--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,7 @@
 .footer {
   text-align: center;
-  padding: 1rem;
+  padding: 0;
+  margin-top: 20px;
 }
 
 .footer__text {
@@ -8,5 +9,5 @@
   line-height: 16px;
   font-weight: 400;
   color: rgba(33, 33, 33, 0.7);
-  height: 16px;
+  margin: 0;
 }
