--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,7 @@
 .cards {
   padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
 .cards__list {
@@ -14,5 +16,6 @@
 @media screen and (max-width: 627px) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
+    gap: 20px;
   }
 }
