--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,11 +1,11 @@
 .page {
   background-color: #fcf5e5;
   min-height: 100vh;
-  font-family: Poppins Arial, Helvetica, sans-serif;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
   color: #212121;
 }
 
-.section--profile {
+.page__section {
   max-width: 1280px;
   margin: 0 auto;
 }
