--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -27,7 +27,7 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
-  height: 32px;
+  color: #212121;
 }
 
 .profile__description {
@@ -41,11 +41,13 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
-  height: 16px;
   color: rgba(33, 33, 33, 0.7);
 }
 
 .profile__edit-btn {
+  display: flex;
+  align-items: center;
+  gap: 8px;
   margin-top: auto;
   font-weight: 500;
   font-size: 16px;
@@ -56,7 +58,8 @@
   text-decoration: none;
   color: #212121;
   opacity: 0.7;
-  border-radius: 90px;
+  border: none;
+  background-color: transparent;
 }
 .profile__edit-btn:hover {
   cursor: pointer;
@@ -64,8 +67,12 @@
 }
 
 .profile__add-btn {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  justify-content: center;
   margin-left: auto;
-  margin-top: 138px;
+  margin-top: auto;
   background-color: #212121;
   color: #fcf5e5;
   width: 149px;
@@ -74,6 +81,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 16px;
+  border: none;
 }
 .profile__add-btn:hover {
   cursor: pointer;
