--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -116,6 +116,9 @@
     text-align: center;
     /* margin-right: 0; */
   }
+  .profile__edit-btn {
+    margin: 0 auto;
+  }
 
   .profile__add-btn {
     margin: 0;
