--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,6 +1,9 @@
 /* .card {
   max-width: 413px;
 } */
+.card {
+  position: relative; /* Required to position the delete button */
+}
 .card__image {
   height: 413px;
   width: 100%;
@@ -28,6 +31,27 @@
   margin: 0;
 }
 
+.card__delete-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 32px;
+  height: 32px;
+  background-image: url("../images/delete-icon.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  background-color: transparent;
+}
+
+.card__delete-btn:hover {
+  cursor: pointer;
+  opacity: 1;
+  background-image: url("../images/delete-icon-hover.svg");
+}
+
 .card__like-btn {
   background-image: url(../images/heart.svg);
   width: 23px;
@@ -41,6 +65,13 @@
 .card__like-btn:hover {
   cursor: pointer;
   opacity: 1;
+}
+.card__like-btn_liked {
+  background-image: url("../images/like-icon-liked.svg");
+  opacity: 1;
+}
+.card__like-btn_liked:hover {
+  background-image: url("../images/like-icon-liked-hover.svg");
 }
 
 @media screen and (max-width: 627px) {
