--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -11,21 +11,60 @@
   justify-content: center;
   padding: 0 20px;
   visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease, visibility 0s 0.3s;
 }
 
-.modal_opened {
+.modal_is-opened {
   visibility: visible;
+  opacity: 1;
+  transition: opacity 0.3s ease, visibility 0s 0s;
 }
 
-.modal__container {
-  background: #fff;
-  padding: 32px 50px;
+.modal__content {
   max-width: 730px;
-  position: relative;
   width: 100%;
   box-sizing: border-box;
+  /* background-color: #fff; */
   border-radius: 8px;
-  gap: 32px;
+  position: relative;
+  padding: 36px 50px 32px;
+  /* padding: 32px 50px;
+  gap: 32px; */
+}
+
+.modal__content_type_preview {
+  padding: 0;
+  width: auto; /* Allow the modal width to fit the image */
+  max-width: 90%; /* Limit the maximum width */
+  max-height: 90%; /* Limit the maximum height */
+  border-radius: 8px;
+  height: 661px;
+}
+
+.modal__image {
+  width: 100%;
+  object-fit: contain;
+  max-width: 80vw;
+  max-height: 80vh;
+  border-radius: inherit;
+}
+
+.modal__caption {
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  color: #ffffff;
+  background: #212121;
+  border-radius: 8px;
+  padding: 4px 8px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  width: fit-content; /* Automatically adjusts to fit the text */
+  white-space: normal; /* Prevents wrapping */
+  margin-top: 8px; /* Add space between image and caption */
+  max-width: 214px;
+  left: 223px;
 }
 
 .modal__close-btn {
@@ -38,6 +77,13 @@
   padding: 0;
   background: none;
   opacity: 0.4;
+}
+
+.modal__close-btn_type_preview {
+  background-image: url("../images/close_icon.svg");
+  top: 0;
+  right: -52.5px;
+  opacity: 1;
 }
 
 .modal__close-btn:hover {
@@ -87,9 +133,11 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 16px;
+  transition: background 0.3s;
 }
 .modal__submit-btn:hover {
   cursor: pointer;
+  background: rgba(0, 0, 0, 0.8);
 }
 
 @media screen and (max-width: 627px) {
@@ -97,7 +145,7 @@
     padding: 0 10px;
   }
 
-  .modal__container {
+  .modal__content {
     padding: 12px;
   }
 
@@ -115,5 +163,20 @@
   }
   .modal__submit-btn {
     width: 100%;
+  }
+  .modal__content_type_preview {
+    width: 288px;
+    height: 426.57px;
+    border-radius: 4px;
+  }
+  .modal__caption {
+    font-size: 16px;
+    line-height: 19.2px;
+  }
+
+  .modal__close-btn {
+    width: 40px;
+    height: 40px;
+    top: -27px;
   }
 }
